fixtures/invalid/bad-nav-href.mu
@nav label="Bad" href="javascript:alert(1)"
